--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,7 +50,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.wrteam.eschool"
+        applicationId "com.kayan.app"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
@@ -74,7 +74,7 @@ android {
             signingConfig signingConfigs.release
         }
     }
-    namespace 'com.wrteam.eschool'
+    namespace 'com.kayan.app'
 }
 
 flutter {
