--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: eschool
+named: eschool
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -37,7 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.6
   intl: ^0.18.1
-  http: ^0.13.4
+  #http: ^0.13.4
   google_fonts: ^4.0.5
   dotted_border: ^2.0.0+2
   table_calendar: ^3.0.4
@@ -75,7 +75,7 @@ dependencies:
 
 dependency_overrides:
   intl: any
- # http: any
+  http: any
   win32: any
 
 dev_dependencies:
